-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.5.2, 6.6.0 Beta1
-
None
-
cd16a5ffb (dev), 761b455d4 (dev), 56a4c8992 (6.5), 5769841f1 (6.6), 4c0a42315 (6.6), 1d4827378 (6.5)
1329: ********* Start testing of tst_usertypes *********
FAIL! : tst_usertypes::watcherInQml() Compared values are not the same
Actual (obj->property("result").value<QString>()): ""
Expected (QString::fromLatin1("HELLO")) : "HELLO"
Loc: [/Users/qt/work/qt/qtremoteobjects/tests/auto/qml/usertypes/tst_usertypes.cpp(225)]
Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 5042ms
Details: https://testresults.qt.io/coin/integration/qt/qtremoteobjects/tasks/1691230133
Tested changes (refs/builds/qtci/6.6/1686112611):
https://codereview.qt-project.org/c/qt/qtremoteobjects/+/482367/2 Update dependencies on '6.6' in qt/qtremoteobjects
| For Gerrit Dashboard: QTBUG-114340 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 482496,5 | QML: Re-add QMetaType::convert() attempt for argument conversion | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 482497,5 | QML: Allow coercing variant objects to their own type | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 483160,2 | QML: Allow coercing variant objects to their own type | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 483161,3 | QML: Allow coercing variant objects to their own type | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 483162,2 | QML: Re-add QMetaType::convert() attempt for argument conversion | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 483163,3 | QML: Re-add QMetaType::convert() attempt for argument conversion | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |