QML: Re-add QMetaType::convert() attempt for argument conversion

There are people who depend on QMetaType to convert their types. This is
not nice, but removing it breaks compatibility.

Fixes: QTBUG-114340
Change-Id: I0a7f54b8fd0f77b71e7e56f65ef7d6f91c876237
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 761b455d4741bdbef47845623d6f44bdc8a464b5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>