tests/auto/qml/qqmllanguage/data/unregisteredValueTypeConversion.qml
@@ -2,5 +2,8 @@ import QtQml
 import Test
 
 UnregisteredValueTypeHandler {
-    Component.onCompleted: consume(produce())
+    Component.onCompleted: {
+        consume(produce())
+        consume(produceDerived())
+    }
 }
